[gd_scene load_steps=4 format=3 uid="uid://3cu2aox5pbrm"]

[ext_resource type="Theme" uid="uid://cd6d31tdgl3h8" path="res://Assets/Fonts/text_theme.tres" id="1_laocr"]
[ext_resource type="Script" path="res://Scenes/Startup/menu.gd" id="1_vaapq"]
[ext_resource type="Texture2D" uid="uid://b1frd6iouggib" path="res://Assets/Sprites/Loading/Checkbox.png" id="2_ht23m"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vaapq")

[node name="Cosa" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -288.0
offset_top = -208.0
offset_right = 288.0
offset_bottom = 208.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.0941176, 0.164706, 0.27451, 0.588235)

[node name="CRT" type="RichTextLabel" parent="Cosa"]
layout_mode = 0
offset_left = 160.0
offset_top = 56.0
offset_right = 416.0
offset_bottom = 136.0
theme = ExtResource("1_laocr")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 64
text = "CRT 
Shader"

[node name="Crtcheck" type="CheckBox" parent="Cosa/CRT"]
layout_mode = 0
offset_left = 216.0
offset_top = 32.0
offset_right = 248.0
offset_bottom = 64.0
alignment = 1
icon_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="Cosa/CRT/Crtcheck"]
z_index = -1
texture = ExtResource("2_ht23m")
centered = false
metadata/_edit_lock_ = true

[node name="Noise2" type="RichTextLabel" parent="Cosa"]
layout_mode = 0
offset_left = 160.0
offset_top = 144.0
offset_right = 416.0
offset_bottom = 224.0
theme = ExtResource("1_laocr")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 64
text = "Noise 
filter"

[node name="Noisecheck" type="CheckBox" parent="Cosa/Noise2"]
layout_mode = 0
offset_left = 216.0
offset_top = 32.0
offset_right = 248.0
offset_bottom = 64.0
button_pressed = true
alignment = 1
icon_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="Cosa/Noise2/Noisecheck"]
z_index = -1
texture = ExtResource("2_ht23m")
centered = false
metadata/_edit_lock_ = true

[node name="Back" type="Button" parent="Cosa"]
layout_mode = 0
offset_left = 248.0
offset_top = 288.0
offset_right = 336.0
offset_bottom = 332.0
theme = ExtResource("1_laocr")
text = "Back"

[connection signal="toggled" from="Cosa/CRT/Crtcheck" to="." method="_on_crtcheck_toggled"]
[connection signal="toggled" from="Cosa/Noise2/Noisecheck" to="." method="_on_noisecheck_toggled"]
[connection signal="pressed" from="Cosa/Back" to="." method="_on_back_pressed"]
